# AMBEDKAR

./: .gitignore  CITATION.bib  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
ambedkar/: __init__.py
ambedkar/core/: __init__.py  contrarium.py  decoding.py
ambedkar/evaluation/: __init__.py  iir.py
ambedkar/utils/: __init__.py  divergence.py
data/sample_prompts/: caste_prompts.jsonl  religion_prompts.jsonl
scripts/: run_evaluation.py  train_verifier.py
tests/: conftest.py  test_contrarium.py  test_divergence.py  test_iir.py
